fix slider jumping controls

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,12 +231,11 @@
 
 .healthcare__slider--image {
     position: absolute;
-    max-width: 0%;
     width: 100%;
     height: 100%;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
     transition: max-width 1s 1s cubic-bezier(0.96, 0.07, 0.29, 0.96);
 }
 
@@ -256,6 +255,7 @@
 .healthcare__slider--info-descriptions {
     position: relative;
     max-width: 530px;
+    flex: 1;
     padding-bottom: 80px;
 }
 
